--- a/JustParkTechTest/app/src/main/AndroidManifest.xml
+++ b/JustParkTechTest/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.joshuahughes.justparktechtest">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +24,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBa1nTQhr6c_AMAaP4h1WzMENsL_nMy5jI"/>
+            android:value="AIzaSyBY2qxvCz2m4Vepx6nHgW6cH8gVjnokoAk"/>
     </application>
 
 </manifest>
