--- a/JustParkTechTest/app/build.gradle
+++ b/JustParkTechTest/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
 }
