--- a/JustParkTechTest/app/src/main/AndroidManifest.xml
+++ b/JustParkTechTest/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity"
+            android:name="com.joshuahughes.justparktechtest.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.joshuahughes.justparktechtest.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
