--- a/JustParkTechTest/app/build.gradle
+++ b/JustParkTechTest/app/build.gradle
@@ -23,13 +23,13 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.google.code.gson:gson:2.4'
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.google.maps.android:android-maps-utils:0.4.+'
 }
